[patch.crates-io]
hyper = { git = "https://github.com/rjzak/hyper", branch = "wasi_wip" }

[package]
name = "steward"
version = "0.2.0"
edition = "2021"
license = "AGPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "^1.0.66", default-features = false }
attestation = { path = "crates/attestation", features = ["sgx", "snp"] }
axum = { version = "^0.6.1", features = ["headers"], default-features = false }
clap = { version = "^4.0.29", features = ["help", "usage", "error-context", "std", "derive", "env"], default-features = false }
confargs = { version = "^0.1.3", default-features = false }
steward-server = { path = "crates/server" }
tokio = { version = "^1.23.0", features = ["rt", "macros"], default-features = false }
tower-http = { version = "^0.3.5", features = ["trace"], default-features = false }
tracing = { version = "^0.1.29", default-features = false }

[target.'cfg(not(target_os = "wasi"))'.dependencies]
tokio = { version = "^1.23.0", features = ["rt-multi-thread", "macros"], default-features = false }

[profile.release]
incremental = false
codegen-units = 1
lto = true
strip = true

[workspace]
resolver = '2'
members = [
    'crates/attestation',
    'crates/server',
]
