[patch.crates-io]
hyper = { git = "https://github.com/rjzak/hyper", branch = "wasi_wip" }

[package]
name = "steward"
version = "0.2.0"
edition = "2021"
license = "AGPL-3.0"

[workspace.dependencies]
# Internal dependencies
attestation = { path = "crates/attestation", version = "0.2.0" }
steward-server = { path = "crates/server", version = "0.2.0" }

# External dependencies
anyhow = { version = "^1.0.68", default-features = false }
axum = { version = "^0.5.17", default-features = false }
clap = { version = "^4.0.32", default-features = false }
confargs = { version = "^0.1.3", default-features = false }
const-oid = { version = "0.9.1", default-features = false }
der = { version = "0.6", default-features = false }
flagset = { version = "0.4.3", default-features = false }
hex = { version = "0.4.3", default-features = false }
http = { version = "^0.2.6", default-features = false }
hyper = { git = "https://github.com/rjzak/hyper", branch = "wasi_wip", default-features = false }
memoffset = { version = "0.7.1", default-features = false }
p256 = { version = "0.11", default-features = false }
p384 = { version = "0.11", default-features = false }
rand = { version = "0.8", default-features = false }
rsa = {version = "0.7.2", default-features = false }
rstest = { version = "0.16", default-features = false }
rustls-pemfile = {version = "1.0.1", default-features = false }
sec1 = { version = "0.3", default-features = false }
semver = { version = "1.0", default-features = false }
serde = { version = "1.0", default-features = false }
sgx = { version = "0.6.0", default-features = false }
sha2 = { version = "^0.10.2", default-features = false }
signature = {version = "1.6", default-features = false }
spki = { version = "0.6", default-features = false }
testaso = { version = "0.1", default-features = false }
tokio = { version = "^1.23.0", default-features = false }
toml = { version = "0.5", default-features = false }
tower = { version = "^0.4.11", default-features = false }
tower-http = { version = "^0.3.5", default-features = false }
tracing = { version = "^0.1.29", default-features = false }
tracing-subscriber = { version="^0.3.15", default-features = false }
uuid = { version = "^1.2.2", default-features = false }
x509 = { version = "0.1", package = "x509-cert", default-features = false }
zeroize = { version = "^1.5.2", default-features = false }

[dependencies]
# Internal dependencies
attestation = { workspace = true }
steward-server = { workspace = true }

# External dependencies
anyhow = { workspace = true }
axum = { workspace = true, features = ["headers"] }
clap = { workspace = true, features = ["help", "usage", "error-context", "std", "derive", "env"] }
confargs = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
tower-http = { workspace = true, features = ["trace"] }
tracing = { workspace = true }

[target.'cfg(not(target_os = "wasi"))'.dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[profile.release]
incremental = false
codegen-units = 1
lto = true
strip = true

[workspace]
resolver = '2'
members = [
    'crates/attestation',
    'crates/server',
]
