[package]
name = "attestation"
version = "0.2.0"
edition = "2021"
license = "AGPL-3.0"
description = "Common workload attestation validation library"

[features]
default = ["sgx", "snp"]
sgx = ["dep:sgx", "dep:rustls-pemfile"]
snp = ["dep:flagset", "dep:semver"]

[dependencies]
anyhow = { version = "^1.0.55", features = ["std"], default-features = false }
const-oid = { version = "0.9.1", features = ["db"], default-features = false }
der = { version = "0.6", features = ["std"], default-features = false }
flagset = { version = "0.4.3", default-features = false, optional = true }
hex = { version = "0.4.3", features = ["alloc"], default-features = false }
rand = { version = "0.8", features = ["std"], default-features = false }
rsa = {version = "0.7.2", features = ["std"], default-features = false }
rustls-pemfile = {version = "1.0.1", default-features = false, optional = true }
sec1 = { version = "0.3", features = ["std", "pkcs8"], default-features = false }
semver = { version = "1.0", features = ["serde"], default-features = false, optional = true }
serde = { version = "1.0", features = ["derive", "std"], default-features = false }
sgx = { version = "0.6.0", default-features = false, optional = true }
sha2 = { version = "^0.10.2", default-features = false }
signature = {version = "1.6", default-features = false }
spki = { version = "0.6", default-features = false }
p256 = { version = "0.11", features = ["ecdsa", "std", "pem"], default-features = false }
p384 = { version = "0.11", features = ["ecdsa", "std", "pem"], default-features = false }
x509 = { version = "0.1", features = ["std"], package = "x509-cert", default-features = false }
zeroize = { version = "^1.5.2", features = ["alloc"], default-features = false }

[dev-dependencies]
testaso = { version = "0.1", default-features = false }
toml = { version = "0.5", default-features = false }
