[package]
name = "attestation"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://github.com/enarx/steward"
repository = "https://github.com/enarx/steward"
description = "Common workload attestation validation library"

[features]
default = ["sgx", "snp"]
sgx = ["dep:sgx", "dep:rustls-pemfile"]
snp = ["dep:flagset", "dep:semver"]

[dependencies]
anyhow = { workspace = true, features = ["std"] }
chrono = { workspace = true, features = ["clock", "serde", "std"] }
const-oid = { workspace = true }
der = { workspace = true, features = ["std"] }
flagset = { workspace = true, optional = true }
hex = { workspace = true, features = ["alloc"] }
p256 = { workspace = true, features = ["ecdsa", "std", "pem"] }
p384 = { workspace = true, features = ["ecdsa", "std", "pem"] }
rand = { workspace = true, features = ["std"] }
rsa = { workspace = true, features = ["std"] }
rustls-pemfile = { workspace = true, optional = true }
sec1 = { workspace = true, features = ["std", "pkcs8"] }
semver = { workspace = true, features = ["serde"], optional = true }
serde = { workspace = true, features = ["derive", "std"] }
serde_json = { workspace = true, features = ["alloc"] }
sgx = { workspace = true, features = ["rcrypto"], optional = true }
sha2 = { workspace = true }
signature = { workspace = true}
spki = { workspace = true }
tracing = { workspace = true }
x509 = { workspace = true, features = ["std"] }
zeroize = { workspace = true, features = ["alloc"] }

[dev-dependencies]
testaso = { workspace = true }
toml = { workspace = true }
