[package]
name = "steward-server"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://github.com/enarx/steward"
repository = "https://github.com/enarx/steward"
description = "Server library for Steward"

[dependencies]
# Internal dependencies
attestation = { workspace = true }

# External dependencies
anyhow = { workspace = true }
axum = { workspace = true, features = ["headers"] }
const-oid = { workspace = true, features = ["db"] }
der = { workspace = true, features = ["std"] }
hyper = { workspace = true, features = ["http1", "server"] }
rustls-pemfile = { workspace = true }
sec1 = { workspace = true, features = ["std", "pkcs8"] }
serde = { workspace = true, features = ["derive", "std"] }
tokio = { workspace = true, features = ["rt", "macros"] }
toml = { workspace = true, features = ["parse"] }
tower-http = { workspace = true, features = ["trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json", "fmt"] }
uuid = { workspace = true, features = ["v4"] }
x509 = { workspace = true, features = ["std"] }
zeroize = { workspace = true, features = ["alloc"] }

[dev-dependencies]
axum = { workspace = true }
http = { workspace = true }
memoffset = { workspace = true }
rstest = { workspace = true }
sgx = { workspace = true }
tower = { workspace = true, features = ["util"] }
testaso = { workspace = true }
