[package]
name = "sgx_validation"
version = "0.2.0"
edition = "2021"
license = "AGPL-3.0"
description = "Intel SGX Attestation validation library for Steward"

[dependencies]
cryptography = { path = "../cryptography", features = ["crl"] }
anyhow = { version = "^1.0.55", default-features = false }
der = { version = "0.6", features = ["std"], default-features = false }
hex = { version = "0.4", features = ["alloc"], default-features = false }
serde = { version = "1.0", features = ["derive", "std"], default-features = false }
sgx = { version = "0.5.0", default-features = false }

[dev-dependencies]
testaso = { version = "0.1", default-features = false }
toml = { version = "0.5", default-features = false }
