[package]
name = "snp_validation"
version = "0.2.0"
edition = "2021"
license = "AGPL-3.0"
description = "AMD SEV-SNP Attestation validation library for Steward"

[dependencies]
cryptography = { path = "../cryptography", features = ["crl"] }
anyhow = { version = "^1.0.55", default-features = false }
der = { version = "0.6", features = ["std"], default-features = false }
flagset = { version = "0.4.3", default-features = false }
hex = { version = "0.4", features = ["alloc"], default-features = false }
serde = { version = "1.0", features = ["derive"], default-features = false }
semver = { version = "1.0", features = ["serde"], default-features = false }

[dev-dependencies]
testaso = { version = "0.1", default-features = false }
toml = { version = "0.5", default-features = false }
