[package]
name = "validation_common"
version = "0.2.0"
edition = "2021"
license = "AGPL-3.0"
description = "Common attestation validation library for Steward"

[dependencies]
hex = { version = "0.4.3", features = ["alloc"], default-features = false }
serde = { version = "1.0", features = ["derive"], default-features = false }

[dev-dependencies]
toml = { version = "0.5", default-features = false }